--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/postcss7-compat": "^2.0.2",
-    "autoprefixer": "^9",
+    "autoprefixer": "^9.8.6",
     "core-js": "^3.6.5",
-    "postcss": "^7",
+    "postcss": "^7.0.35",
+    "postcss-cli": "^8.3.1",
+    "postcss-loader": "^5.3.0",
     "register-service-worker": "^1.7.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vue": "^3.0.0",
